Increased sendnote function timeout to 300s

--- a/vercel.json
+++ b/vercel.json
@@ -61,6 +61,10 @@
       "destination": "/api/activitypub/sendNote.js"
     }
   ],
+  "functions": {
+    "/api/activitypub/sendNote.js": {
+      "maxDuration": 300
+    },
   "headers": [
     {
       "source": "/(.*).ajson",
