Added support for tags for an individual article and tag rendering options

--- a/hugo.toml
+++ b/hugo.toml
@@ -29,3 +29,5 @@ repoUrl="https://git.qoto.org/flear"
 siteRepoUrl="https://git.qoto.org/flear/flear-site"
 siteEmail="flear@flear.org"
 postHashtags=["HamRadio", "AmateurRadio", "Ham", "RF", "ElectricalEngineering", "EE"]
+renderDefaultHashtags=true
+renderArticleHashtags=true
