--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,7 @@
       "destination": "/api/activitypub/authorize_interaction.ts"
     },
     {
-      "source": "/flear",
+      "source": "/fedipage",
       "destination": "/api/activitypub/actor.js"
     },
     {
