--- a/layouts/index.manifest.json
+++ b/layouts/index.manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{ .Site.Params.siteName }} - {{ .Site.Params.siteTagLine }},
+  "name": "{{ .Site.Params.siteName }} - {{ .Site.Params.siteTagLine }}",
   "short_name": "{{ .Site.Params.siteName }}",
   "description": "{{ .Site.Params.siteDescription }}",
   "start_url": "/?homescreen=1",
