Attempting to fix bug with rewrites for detecting headers

--- a/vercel.json
+++ b/vercel.json
@@ -61,7 +61,7 @@
       "destination": "/api/activitypub/sendNote.js"
     },
     {
-      "source": "/:pathSection/:pathPage/",
+      "source": "/:pathSection/:pathPage(/|/index.htm|/index.html)",
       "has": [
         {
           "type": "header",
@@ -72,7 +72,7 @@
       "destination": "/:pathSection/:pathPage/status.ajson"
     },
     {
-      "source": "/:pathSection/:pathPage/",
+      "source": "/:pathSection/:pathPage/(/|/index.htm|/index.html)",
       "has": [
         {
           "type": "header",
@@ -83,7 +83,7 @@
       "destination": "/:pathSection/:pathPage/status.ajson"
     },
     {
-      "source": "/:pathSection/:pathPage/activity",
+      "source": "/:pathSection/:pathPage/activity[/]{0,1}",
       "destination": "/:pathSection/:pathPage/activity.ajson"
     }
   ],
