--- a/vercel.json
+++ b/vercel.json
@@ -61,25 +61,8 @@
       "destination": "/api/activitypub/sendNote.js"
     },
     {
-      "source": "/:pathSection/:pathPage",
-      "has": [
-        {
-          "type": "header",
-          "key": "Accept",
-          "value": "application/activity+json"
-        }
-      ],
-      "destination": "/:pathSection/:pathPage/status.ajson"
-    },
-    {
-      "source": "/:pathSection/:pathPage",
-      "has": [
-        {
-          "type": "header",
-          "key": "Accept",
-          "value": "application/json"
-        }
-      ],
+      "source": "/:pathSection/:pathPage/",
+
       "destination": "/:pathSection/:pathPage/status.ajson"
     },
     {
