--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
   "framework": "hugo",
   "redirects": [
     {
+      "source": "/news/(.*)/",
+
+      "destination": "/news/$1/status.ajson"
+    },
+    {
       "source": "/amp/(.+)/",
       "destination": "/$1/"
     },
@@ -17,17 +22,6 @@
     {
       "source": "/activitypub-support-added/",
       "destination": "/news/activitypub-support-added/"
-    },
-    {
-      "source": "/news/:pathPage/",
-      "has": [
-        {
-          "type": "header",
-          "key": "Accept",
-          "value": "application/activity+json"
-        }
-      ],
-      "destination": "/news/:pathPage/status.ajson"
     }
   ],
   "rewrites": [
