--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "@types/multiparty": "^0.0.34",
     "typescript": "^5.2.2"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "vercel-build": "sh clean-build.sh"
+  }
 }
