--- a/vercel.json
+++ b/vercel.json
@@ -21,17 +21,6 @@
   ],
   "rewrites": [
     {
-      "source": "/news/(.*)/",
-      "has": [
-        {
-          "type": "header",
-          "key": "Accept",
-          "value": "application/activity+json"
-        }
-      ],
-      "destination": "/news/$1/status.ajson"
-    },
-    {
       "source": "/(.+)/$",
       "destination": "/$1/index.html"
     },
@@ -70,6 +59,28 @@
     {
       "source": "/send-note",
       "destination": "/api/activitypub/sendNote.js"
+    },
+    {
+      "source": "/:pathSection/:pathPage/",
+      "has": [
+        {
+          "type": "header",
+          "key": "Accept",
+          "value": "application/activity+json"
+        }
+      ],
+      "destination": "/:pathSection/pathPage/status.ajson"
+    },
+    {
+      "source": "/:pathSection/:pathPage/",
+      "missing": [
+        {
+          "type": "header",
+          "key": "Accept",
+          "value": "application/activity+json"
+        }
+      ],
+      "destination": "/:pathSection/pathPage/status.html"
     },
     {
       "source": "/:pathSection/:pathPage/activity",
