Trying to escape the +

--- a/vercel.json
+++ b/vercel.json
@@ -26,12 +26,22 @@
         {
           "type": "header",
           "key": "Accept",
-          "value": "application/json"
+          "value": "application/activity\+json"
         }
       ],
       "destination": "/$1/$2/status.ajson"
     },
-
+    {
+      "source": "/([^/]*)/(.*)/",
+      "has": [
+        {
+          "type": "header",
+          "key": "Accept",
+          "value": "text/html"
+        }
+      ],
+      "destination": "/$1/$2/status.html"
+    },
     {
       "source": "/([^/]*)/(.*)/activity",
       "destination": "/$1/$2/activity.ajson"
