--- a/vercel.json
+++ b/vercel.json
@@ -22,11 +22,11 @@
   "rewrites": [
     {
       "source": "/([^/]*)/(.*)/",
-      "has": [
+      "missing": [
         {
           "type": "header",
           "key": "Accept",
-          "value": "application/activity\+json"
+          "value": "text/html"
         }
       ],
       "destination": "/$1/$2/status.ajson"
