Well that broke web browsers... so trying again

--- a/vercel.json
+++ b/vercel.json
@@ -18,26 +18,16 @@
   "rewrites": [
     {
       "source": "/([^/]*)/(.*)/",
-      "missing": [
-        {
-          "type": "header",
-          "key": "Accept",
-          "value": "text/html"
-        }
-      ],
-      "destination": "/$1/$2/status.ajson"
-    },
-    {
-      "source": "/([^/]*)/(.*)/",
       "has": [
         {
           "type": "header",
           "key": "Accept",
-          "value": "text/html"
+          "value": "application/activity\\+json"
         }
       ],
-      "destination": "/$1/$2/status.html"
+      "destination": "/$1/$2/status.ajson"
     },
+
     {
       "source": "/([^/]*)/(.*)/activity",
       "destination": "/$1/$2/activity.ajson"
