Returning activity+json even if json is requested for AP endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -130,7 +130,7 @@
       "headers": [
         {
           "key": "content-type",
-          "value": "application/json"
+          "value": "application/activity+json"
         }
       ]
     },
