--- a/vercel.json
+++ b/vercel.json
@@ -106,12 +106,23 @@
   },
   "headers": [
     {
-      "source": ".*",
+      "source": "(.*)",
       "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        }
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "*" },
+        { "key": "Access-Control-Expose-Headers", "value": "*" },
+        { "key": "Access-Control-Expose-Headers", "value": "*" }
+      ]
+    },
+    {
+      "source": "/",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "*" },
+        { "key": "Access-Control-Expose-Headers", "value": "*" },
+        { "key": "Access-Control-Allow-Headers", "value": "*" }
       ]
     },
     {
