--- a/vercel.json
+++ b/vercel.json
@@ -105,7 +105,15 @@
     }
   },
   "headers": [
-
+    {
+      "source": ".*",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    },
     {
       "source": "/([^/]*)/(.*)/",
       "has": [
